[package]
name = "decompound"
version = "0.2.0"
edition = "2021"
rust-version = "1.64.0"
authors = ["Alex Povel <rust@alexpovel.de>"]
description = "Decompose a compound word into its constituent parts. Works in any language, as you provide the rules around what constitutes a (*single*) word."
license = "MIT"
repository = "https://github.com/alexpovel/decompound"
readme = "README.md"
documentation = "https://docs.rs/decompound"
keywords = ["dictionary", "compound", "word", "detection"]
categories = ["algorithms"]
include = ["README.md", "LICENSE", "Cargo.toml", "src"]

[dependencies]
bitflags = "2.4.0"
log = "0.4.19"
unicode_titlecase = "2.2.0"

[dev-dependencies]
assert_cmd = "2.0.12"
rstest = "0.18.1"
